--- a/index.html
+++ b/index.html
@@ -13,18 +13,24 @@
         <h1>My Library</h1>
         <button id="new-book">
             Add a Book</button>
-        <form id="book-form">
+        <form id="book-form" novalidate>
             <h2>New Book</h2>
-            <div><label for="author">Author: </label>
-                <input type="text" name="author" id="author" required></div>
-            <div><label for="title">Title: </label>
-                <input type="text" name="title" id="title"></div>
-            <div><label for="pages">Number of pages: </label>
-                <input type="text" name="pages" id="pages"></div>
+            <div><label for="author">*Author:
+                <input type="text" name="author" id="author" required>
+                <span class="error" aria-live="polite"></span>
+            </label></div>
+            <div><label for="title">*Title: 
+                <input type="text" name="title" id="title" required>
+                <span class="error" aria-live="polite"></span>
+            </label></div>
+            <div><label for="pages">*Number of pages: 
+                <input type="number" name="pages" id="pages" required>
+                <span class="error" aria-live="polite"></span>
+            </label></div>
             <div><div><input type="radio" id="has-read" name="read" value="true">
                 <label for="Has read">Has read</label></div>
                 <div>
-                <input type="radio" id="has-not-read" name="read" value="false">
+                <input type="radio" id="has-not-read" name="read" value="false" checked="checked">
                 <label for="Has not read">Has not read</label>
                 </div>
             </div>
